<resources>
    <string name="app_name">lab4</string>
    <string name="todo">Todo</string>
    <string name="nombre">Nombre</string>
    <string name="escribe_aqui">escribe_aqui</string>
    <string name="flores">Flores</string>
    <string name="livingston">Livingston</string>
    <string name="antigua">Antigua</string>
    <string name="empty" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comente_aqui">comente_aqui</string>
    <string name="he_aqui_la_bella_anitgua_guatemla">he aqui la_bella anitgua guatemla</string>
    <string name="comentario">comentario</string>
    <string name="foto_del_volcan_de_agua">foto del volcan de agua</string>
    <string name="antigua_es_una_peque_a_ciudad_rodeada_por_volcanes_en_el_sur_de_guatemala_es_famosa_por_sus_edificios_coloniales_espa_oles_muchos_de_ellos_restaurados_despu_s_del_terremoto_de_1773_que_termin_con_el_r_gimen_de_200_a_os_de_antigua_como_la_capital_colonial_de_guatemala_algunos_ejemplos_destacados_de_la_arquitectura_incluyen_la_merced_una_baja_iglesia_amarilla_y_blanca_de_estilo_barroco_es_una_parte_integral_de_la_famosa_semana_santa_en_la_ciudad_con_desfiles_y_rituales">Antigua es una pequeña ciudad rodeada por volcanes en el sur de Guatemala. Es famosa por sus edificios coloniales españoles, muchos de ellos restaurados después del terremoto de 1773 que terminó con el régimen de 200 años de Antigua como la capital colonial de Guatemala. Algunos ejemplos destacados de la arquitectura incluyen La Merced, una baja iglesia amarilla y blanca de estilo barroco. Es una parte integral de la famosa Semana Santa en la ciudad, con desfiles y rituales.</string>
</resources>
