<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:id="@+id/fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/imgTikal"
                android:layout_width="388dp"
                android:layout_height="138dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/tikal" />

            <ImageButton
                android:id="@+id/FavButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="304dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.686"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgTikal"
                app:srcCompat="@android:drawable/btn_star"/>

            <TextView
                android:id="@+id/Nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="88dp"
                android:text="@string/nombre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgTikal" />

            <EditText
                android:id="@+id/infoNombre"
                android:layout_width="280dp"
                android:layout_height="49dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="72dp"
                android:hint="@string/escribe_aqui"
                android:importantForAutofill="no"
                android:inputType="text"
                android:labelFor="@id/Nombre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/Nombre"
                app:layout_constraintTop_toBottomOf="@+id/imgTikal" />

            <TextView
                android:id="@+id/InfoTikal"
                android:layout_width="354dp"
                android:layout_height="308dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/nombre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/infoNombre" />

            <Button
                android:id="@+id/FloresBoton"
                android:layout_width="110dp"
                android:layout_height="49dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="16dp"
                android:text="@string/flores"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/InfoTikal"
                app:layout_constraintVertical_bias="0.363" />

            <Button
                android:id="@+id/LivingstonBoton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginBottom="16dp"
                android:text="@string/livingston"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/FloresBoton"
                app:layout_constraintTop_toBottomOf="@+id/InfoTikal"
                app:layout_constraintVertical_bias="0.75" />

            <Button
                android:id="@+id/AntiguaBoton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/antigua"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.562"
                app:layout_constraintStart_toEndOf="@+id/LivingstonBoton"
                app:layout_constraintTop_toBottomOf="@+id/InfoTikal"
                app:layout_constraintVertical_bias="0.607" />

            <TextView
                android:id="@+id/PosNombre"
                android:layout_width="216dp"
                android:layout_height="70dp"
                android:text="@string/empty"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/InfoTikal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgTikal" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
